--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/address_book_service
 spring.datasource.username = root
 spring.datasource.password= Perfios@2021
+spring.profiles.active= dev
+environment = COMMON
+
+server.port=8081
+
+logging.file.name = application.log
+
+logging.level.root = WARN
+logging.level.org.springframework.web = WARN
+logging.level.org.hibernate = ERROR
+logging.level.com.bridgelabz= DEBUG
+
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
